--- a/src/resources/html/About.html
+++ b/src/resources/html/About.html
@@ -2,6 +2,7 @@
 	<head>
 		<meta charset="UTF-8"/>
 		<style>
+			
 			#calosc {
 				width:100%;
 				height:100%;
@@ -66,10 +67,16 @@
 				width:auto;
 			}
 
+			body 
+			{
+				background-image:url(ggg.jpg);
+				background-attachment: fixed; background-size: 100% 100%
+			}
+			
 		</style>
 	</head>
 
-	<body background="ggg.jpg">
+	<body>
 		<div id="calosc">
 			<div id="text">
 				<h2>
@@ -78,19 +85,19 @@
 				</h2>
 			</div>
 			<div id="uczen1">
-				<p><h3>Tyliba Patryk</h3> Główny programista projektu.</p>
+				<p><h3>Tyliba Patryk</h3> Główny programista</p>
 				<img id="ikon" src="ikona1.png">
 			</div>
 			<div id="uczen2">
-				<p><h3>Karoń Dominik</h3> Programista projektu.</p>
+				<p><h3>Karoń Dominik</h3> Programista</p>
 				<img id="ikon" src="ikona1.png">
 			</div>
 			<div id="uczen3">
-				<p><h3>Kwieciński Sławomir</h3> Programista i grafik projektu.</p>
+				<p><h3>Kwieciński Sławomir</h3> Programista i grafik</p>
 				<img id="ikon" src="ikona2.png">
 			</div>
 			<div id="uczen4">
-				<p><h3>Barczyk Filip</h3> Pomysłodawca i designer.</p>
+				<p><h3>Barczyk Filip</h3> Designer</p>
 				<img id="ikon" src="ikona2.png">
 			</div>
 		</div>
